--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.0.0"
