--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@donis3/use-scroll-handler": "^1.0.0",
     "@emotion/react": "^11.11.1",
     "clsx": "^2.0.0",
     "next": "14.0.3",
