--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@donis3/use-scroll-handler": "^1.0.0",
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
+    "@types/react-google-recaptcha": "^2.1.8",
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.0.0"
   },
