--- a/.env
+++ b/.env
@@ -3,6 +3,11 @@ NEXT_PUBLIC_EMAILJS_SERVICE_ID="service_0ymu7xf"
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID="template_donis3com"
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY="E4VhGCQod9t2k5o2M"
 NEXT_PUBLIC_RECAPTCHA_PUBLIC_KEY="6Le_DigpAAAAAIfpxBsMHJqodI-gT9RG2wXZp9YM" 
+#RECAPTCHA_PRIVATE_KEY_FOR_EMAILJS="" this must be saved in emailjs dashboard
 NEXT_PUBLIC_DEV_MAIL_USER="adozkan87"
 NEXT_PUBLIC_DEV_MAIL_PROVIDER="gmail.com"
-#RECAPTCHA_PRIVATE_KEY_FOR_EMAILJS="" this must be saved in emailjs dashboard
+NEXT_PUBLIC_DEV_LINKEDIN=""
+NEXT_PUBLIC_DEV_X="https://twitter.com/DonisDev"
+NEXT_PUBLIC_DEV_FACEBOOK=""
+NEXT_PUBLIC_DEV_INSTAGRAM="https://www.instagram.com/denizozk/"
+NEXT_PUBLIC_DEV_GITHUB="https://github.com/donis3"
