--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.12.0",
+    "rehype-pretty-code": "^0.12.1",
+    "remark-gfm": "^4.0.0",
+    "remark-reading-time": "^2.0.1",
+    "shikiji": "^0.8.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
