--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ NEXT_PUBLIC_DEV_X="https://twitter.com/DonisDev"
 NEXT_PUBLIC_DEV_FACEBOOK=""
 NEXT_PUBLIC_DEV_INSTAGRAM="https://www.instagram.com/denizozk/"
 NEXT_PUBLIC_DEV_GITHUB="https://github.com/donis3"
+NEXT_PUBLIC_DEV_DEVTO="https://dev.to/donis3"
 
 # App Settings
 BLOG_POST_PER_PAGE="2"
