Added new project base64, linkedin  social link, resume update timeline update

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NEXT_PUBLIC_RECAPTCHA_PUBLIC_KEY="6Le_DigpAAAAAIfpxBsMHJqodI-gT9RG2wXZp9YM"
 #RECAPTCHA_PRIVATE_KEY_FOR_EMAILJS="" this must be saved in emailjs dashboard
 NEXT_PUBLIC_DEV_MAIL_USER="adozkan87"
 NEXT_PUBLIC_DEV_MAIL_PROVIDER="gmail.com"
-NEXT_PUBLIC_DEV_LINKEDIN=""
+NEXT_PUBLIC_DEV_LINKEDIN="https://www.linkedin.com/in/donisdev"
 NEXT_PUBLIC_DEV_X="https://twitter.com/DonisDev"
 NEXT_PUBLIC_DEV_FACEBOOK=""
 NEXT_PUBLIC_DEV_INSTAGRAM="https://www.instagram.com/denizozk/"
