--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ NEXT_PUBLIC_DEV_FACEBOOK=""
 NEXT_PUBLIC_DEV_INSTAGRAM="https://www.instagram.com/denizozk/"
 NEXT_PUBLIC_DEV_GITHUB="https://github.com/donis3"
 NEXT_PUBLIC_DEV_DEVTO="https://dev.to/donis3"
+NEXT_PUBLIC_SITE_URL=${APP_URL}
 
 # App Settings 
 BLOG_POST_PER_PAGE="5"
