--- a/.github/workflows/deploy-gh.yml
+++ b/.github/workflows/deploy-gh.yml
@@ -48,6 +48,11 @@ jobs:
                 echo "Unable to determine package manager"
                 exit 1
               fi
+         - name: Setup pnpm
+           if: steps.detect-package-manager.outputs.manager == 'pnpm'
+           uses: pnpm/action-setup@v4
+           with:
+             version: latest
          - name: Setup Node
            uses: actions/setup-node@v4
            with:
