feat: add coming soon page and project structure
- Introduced a new "Coming Soon" page that displays when the site is not enabled.
- Updated environment types to include NEXT_PUBLIC_ENABLE_SITE variable.
- Created a layout for the landing page that conditionally renders the coming soon page.
- Developed a new About page with information about the application.
- Implemented a Projects page that lists available projects or shows a no-projects message.
- Added project metadata handling with validation using Zod.
- Created reusable UI components for empty states.
- Established a project folder structure with MDX content for project descriptions.
- Configured project helpers for reading project directories and metadata.

--- a/.env
+++ b/.env
@@ -3,6 +3,9 @@ NEXT_PUBLIC_SITE_URL=https://donis.dev
 NEXT_PUBLIC_CONTACT_EMAIL=contact
 NEXT_TELEMETRY_DISABLED=1
 
+# CONFIG
+NEXT_PUBLIC_ENABLE_SITE=1
+
 
 # NODE SETTINGS
 TZ="Europe/Istanbul"
