--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.0.4",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
@@ -24,9 +25,14 @@
     "motion": "^12.23.24",
     "next": "16.0.4",
     "next-mdx-remote-client": "^2.1.7",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
+    "use-sound": "^5.0.0",
+    "usehooks-ts": "^3.1.1",
+    "vaul": "^1.1.2",
     "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.13"
   },
