--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "2.9.0-beta2",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
     "prettier": "^3.6.2",
